{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 27,
  "lineage": "9631ef9e-0f7e-4057-d143-4fb3abe84101",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ivolve_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:internet-gateway/igw-069dbc7fbdae161dd",
            "id": "igw-069dbc7fbdae161dd",
            "owner_id": "381492208371",
            "vpc_id": "vpc-02271166a7ab5cb58"
          },
          "dependencies": [
            "aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:route-table/rtb-05c55a1f209c36d0b",
            "id": "rtb-05c55a1f209c36d0b",
            "owner_id": "381492208371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069dbc7fbdae161dd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02271166a7ab5cb58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ivolve_igw",
            "aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab1b11f2334fde9a",
            "route_table_id": "rtb-05c55a1f209c36d0b",
            "subnet_id": "subnet-0cf5ea843598ba7da"
          },
          "dependencies": [
            "aws_internet_gateway.ivolve_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:security-group/sg-0d3cc08f6c629ae85",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3cc08f6c629ae85",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240529090304642200000001",
            "name_prefix": "terraform-",
            "owner_id": "381492208371",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02271166a7ab5cb58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:security-group/sg-01638d08aa00700b3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01638d08aa00700b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240529090304649900000002",
            "name_prefix": "terraform-",
            "owner_id": "381492208371",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02271166a7ab5cb58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:subnet/subnet-0f862a123aa8eaeb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f862a123aa8eaeb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492208371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02271166a7ab5cb58"
          },
          "dependencies": [
            "aws_vpc.ivolve"
          ]
        },
        {
          "index_key": "private2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:subnet/subnet-009c625bc531c13c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009c625bc531c13c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492208371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02271166a7ab5cb58"
          },
          "dependencies": [
            "aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:subnet/subnet-0cf5ea843598ba7da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf5ea843598ba7da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492208371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02271166a7ab5cb58"
          },
          "dependencies": [
            "aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ivolve",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:vpc/vpc-02271166a7ab5cb58",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ab0f1fd8caecfe3",
            "default_route_table_id": "rtb-076a07d06ebcea973",
            "default_security_group_id": "sg-0e3b3d2319c8bc6d5",
            "dhcp_options_id": "dopt-0d8e959f9919f2f40",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02271166a7ab5cb58",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076a07d06ebcea973",
            "owner_id": "381492208371"
          }
        }
      ]
    }
  ]
}